# transformer

./: main.py  pyproject.toml  transformer.ipynb
src/: attention.py  data.py  layers.py  roformer.py  train.py  transformer.py  utils.py
