[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",
    "jupyterlab>=4.0",
    "matplotlib>=3.7.1",
    "tqdm>=4.66.1",
    "numpy>=1.26,<2.1",
    "pandas>=2.2.1",
    "pip>=25.0.1",
    "datasets>=3.6.0",
    "loguru>=0.7.3",
    "sacrebleu>=2.5.1",
    "tokenizers>=0.21.1",
    "tiktoken>=0.12.0",
    "jaxtyping>=0.3.9",
    "beartype>=0.22.9",
]

[tool.uv.sources]
llms-from-scratch = { workspace = true }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]
ignore = ["F722"]
fixable = ["ALL"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"
